@@ -1,3 +1,9 @@
+2009-07-09
+	* Added support for $swapfree
+
+2009-07-08
+	* Fixed a couple memory-related bugs
+
 2009-07-06
 	* Added support for $weather (experimental)
 
